# aggrivator

./: .gitattributes  .gitignore  BOT.md  Cargo.toml  README.md  feed_poller_queue.db  ips.json
docs/superpowers/plans/: 2026-06-07-web-bot-auth-signing.md
docs/superpowers/specs/: 2026-06-07-web-bot-auth-signing-design.md
examples/: probe.rs  webbotauth_keygen.rs
src/: main.rs  signing.rs
