[package]
name = "aggrivator"
version = "0.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
futures = { version = "0.3" }
rusqlite = { version = "0.26", features = ["bundled"] }
reqwest = { "version" = "0.11", features = ["blocking"] }
chrono = { "version" = "0.4.19" }
httpdate = { "version" = "1.0.2" }