[package]
name = "aggrivator"
version = "0.1.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
futures = { version = "0.3" }
rusqlite = { version = "0.26", features = ["bundled"] }
reqwest = { "version" = "0.11", features = ["blocking","rustls-tls","gzip"] }
chrono = { "version" = "0.4.19" }
httpdate = { "version" = "1.0.2" }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }